Update Windows translations

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -12103,41 +12103,41 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
     "name": "العربية",
     "translation": {
       "appbackend#state-starting-body": "الرجاء الإنتظار ",
-      "settings#local-proxy-ports#error-modal-body-http": "<p>\nلقد ضبطت سايفون لإستعمال منفذ (بورت) محلي خاص لبروكسي أل  HTTP.<br>\nمع الأسف    يظهر أن هذا المنفذ في طور الإستعمال حاليا ولا يمكن لسايفون إستعماله .  \n</p>\n<p>الرجاء تغيير قيمة منفذ بروكسي  HTTP المضبوطة  \"configured HTTP proxy port value \" والمحاولة  من جديد.  ننصح بإزالة القيمة كي يستطيع سايفون إختيار منفذ متوفر أوتوماتيكيا. \n</p>",
-      "settings#upstream-proxy#set-both-error-msg": "يجب أن تحدد كل من \"إسم المضيف\" والمنفذ (hostname and port)، أو تترك مكانهما خاليين للإنتقاء الأوتوماتيكي.  ",
+      "settings#local-proxy-ports#error-modal-body-http": "<p>\nلقد ضبطت سايفون لإستعمال منفذ  محلي خاص لبروكسي أل  HTTP.<br>\nمع الأسف    يظهر أن هذا المنفذ في طور الإستعمال حاليا ولا يمكن لسايفون إستعماله .  \n</p>\n<p>الرجاء تغيير قيمة منفذ بروكسي  HTTP المضبوطة  \"configured HTTP proxy port value \" والمحاولة  من جديد.  ننصح بإزالة القيمة كي يستطيع سايفون إختيار منفذ متوفر أوتوماتيكيا. \n</p>",
+      "settings#upstream-proxy#set-both-error-msg": "يجب أن تحدد كل من إسم المضيف والمنفذ ، أو تترك مكانهما خاليين للإنتقاء الأوتوماتيكي.  ",
       "settings#egress-region#select-jp": "اليابان",
       "settings#upstream-proxy#error-modal-body-configured": "لقد  ضبطت سايفون ليستعمل أبستريم بروكسي  upstream proxy\" .<br\">\nومع ذلك، يظهر إننا غير قادرين على الإتصال بسيرفر سايفون من خلال هذا البروكسي.<br>\nالرجاء إعادة ضبط  الإعدادات والمحاولة  من جديد .",
-      "logs#show-debug-label": "أظهر سجلات التصحيح (Debug Logs )",
+      "logs#show-debug-label": "أظهر سجلات التصحيح ",
       "nav#logs": "السجلات ",
       "settings#error-alert": "<strong>خطأ! </strong> يرجى تصحيح القيم غير الصحيحة قبل المتابعة.",
-      "settings#local-proxy-ports#reason": "إذا كنت تستعمل على حاسوبك الشخصي أدوات تستوجب ضبط يدوي لتعمل مع سايفون، يجب أن تدع سايفون يستعمل دائما نفس أرقام المنافذ المحلية (local port numbers). إذا لم يكن لديك سبب لتحديد أرقام المنافذ، يجب أن تدع سايفون ينتقيهم  أوتوماتيكيا كي تساعد على تجنب التضارب.",
+      "settings#local-proxy-ports#reason": "إذا كنت تستعمل على حاسوبك الشخصي أدوات تستوجب ضبط يدوي لتعمل مع سايفون، يجب أن تدع سايفون يستعمل دائما نفس أرقام المنافذ المحلية. إذا لم يكن لديك سبب لتحديد أرقام المنافذ، يجب أن تدع سايفون ينتقيهم أوتوماتيكيا كي تساعد على تجنب التضارب.",
       "appbackend#minimized-to-systray-body": "إضغط الأيقونة لإسترجاع التطبيق ",
       "banner#sponsored-by": "برعاية ",
       "appbackend#state-connected-body": "إكتشف ما وراء حدودك! ",
-      "connection#connected-msg": "بسايفون <span class=\"state-word\">تم الإتصال</span>",
-      "settings#split-tunnel#reason": "المواقع في بلدك غير محجوبة بشكل عام، لكن إذا مكنت هذا الخيار سيعطيك نفاذ أسرع إلى هذه المواقع وفي بعض الأحيان سيخفف من كلفة إستعمال الداتا من موفر خدمة الإنترنت خاصتك (ISP)   ",
+      "connection#connected-msg": "<span class=\"state-word\">تم الإتصال</span> بسايفون ",
+      "settings#split-tunnel#reason": "المواقع في بلدك غير محجوبة بشكل عام، لكن إذا مكنت هذا الخيار سيعطيك نفاذ أسرع إلى هذه المواقع وفي بعض الأحيان سيخفف من كلفة إستعمال الداتا من موفر خدمة الإنترنت خاصتك  ",
       "nav#settings": "إعدادات",
       "nav#connection#connected": "تم الإتصال ",
-      "settings#egress-region#error-modal-title": "السيرفر الإقليمي  غير متوفر ",
+      "settings#egress-region#error-modal-title": "إقليم السيرفر غير متوفر ",
       "settings#upstream-proxy#error-modal-title": "خطأ بروكسي أبستريم.\nUpstream Proxy Error  ",
-      "settings#egress-region#default": "إنتقاء الخيار الإفتراضي  <strong> \"البلد الأسرع\"  \"Fastest Country\" </strong<   يتيح لسايفون إختيار سيرفر أوتوماتيكيا، ذلك سينتج عادة أفضل إتصال  شبكة متوفر.",
-      "connection#stopping-msg": "بسايفون <span class=\"state-word\">جاري قطع الإتصال</span>…",
+      "settings#egress-region#default": "إنتقاء الخيار الإفتراضي  <strong> \"البلد الأسرع\" <strong/>“  يتيح لسايفون إختيار سيرفر أوتوماتيكيا، ذلك سينتج عادة أفضل إتصال  شبكة متوفر.",
+      "connection#stopping-msg": "<span class=\"state-word\">جاري قطع الإتصال</span> بسايفون  …",
       "settings#upstream-proxy#error-modal-body-default": "سايفون مضبوط حاليا لإستعمال بروكسي نظامك كأبستريم بروكسي ”. <br>\nومع ذلك، يظهر إننا غير قادرين على الإتصال بسيرفر سايفون من خلال هذا البروكسي .<br>\nالرجاء تفعيل  \"لا تستخدم أبستريم بروكسي\"  “Don't use upstream proxy” والمحاولة من جديد.",
       "feedback#success-message": "<strong>شكرا!</strong> قد تم إرسال ملاحظاتك.",
       "appbackend#state-stopped-title": "لقد إنقطع الإتصال بسايفون",
-      "settings#split-tunnel#help-text": "إذا شغل، لن تمر الطلبات المقدمة  للخوادم في بلدك عبر سايفون.",
-      "about#visit-download-site": "الرجاء زيارة الموقع <strong><a class=\"NewVersionURL\" href=\"#\">لتحميل  نسخة جديدة  </a></strong> أو لكي <strong><a class=\"InfoURL\" href=\"#\">تحصل على مساعدة ومعلومات  and information</a></strong>. سايفون متوفر للأندرويد والويندوز.",
-      "settings#upstream-proxy#skip-label": "لا تستعمل \"أبستريم\" بروكسي  ",
+      "settings#split-tunnel#help-text": "إذا مكنته، لن تمر الطلبات المقدمة  للخوادم في بلدك عبر سايفون.",
+      "about#visit-download-site": "الرجاء زيارة الموقع <strong><a class=\"NewVersionURL\" href=\"#\">لتحميل  نسخة جديدة  </a></strong> أو لكي <strong><a class=\"InfoURL\" href=\"#\">تحصل على مساعدة ومعلومات  and</a></strong>. سايفون متوفر للأندرويد والويندوز.",
+      "settings#upstream-proxy#skip-label": "لا تستعمل أبستريم بروكسي  ",
       "settings#systray-minimize#help-text": "إذا طبّق الإعداد المناسب، عندما يصّغر تطبيق سايفون سيختبئ في منطقة الإعلام (كما تعرف أيضا  بلوحة النظام  الموجودة قرب الساعة على شريط المهمة في الويندوز) ",
-      "settings#upstream-proxy#port-label": "منفذ (بورت)",
+      "settings#upstream-proxy#port-label": "منفذ ",
       "settings#port-value-error-msg": "يجب أن تكون بين 1 و 65535.",
       "nav#feedback": "ملاحظات  ",
       "connection#starting-msg": "بسايفون  <span class=\"state-word\">جاري الإتصال </span>…",
-      "settings#applying-message": "إعادة الإتصال لتثبيت إعداداتك. ",
+      "settings#applying-message": "يتم إعادة الإتصال لتثبيت إعداداتك. ",
       "appbackend#state-starting-title": "سايفون يحاول الإتصال ",
       "settings#unapplied-changes-prompt#title": "تم تغيير الإعدادات ",
       "settings#egress-region#select-us": "الولايات المتحدة الأمريكية",
-      "feedback#top_para_2": "الكثير من المشاكل يمكن حلها عبر التحديث إلى آخر إصدار. يمكنك  <a class=\"NewVersionURL\" href=\"#\">تنزيل آخر إصدار من خلال النقر هنا </a>, or أو يمكنك إرسال بريد إلكتروني إلى  <a class=\"NewVersionEmail\" href=\"#\"></a>.",
+      "feedback#top_para_2": "الكثير من المشاكل يمكن حلها عبر التحديث إلى آخر إصدار. يمكنك  <a class=\"NewVersionURL\" href=\"#\">تنزيل آخر إصدار من خلال النقر هنا </a>, أو يمكنك إرسال بريد إلكتروني إلى  <a class=\"NewVersionEmail\" href=\"#\"></a>.",
       "notice#systemproxysettings-setproxy-error-body": "<p>فشل سايفون في ضبط إعدادات البروكسي للنظام .</p>\n<p>يمكن أن يعود ذلك لوجود تصادم مع نظام مكافحة الفيروسات خاصتك .  قد تحتاج إلى الضبط اليدوي لتطبيقك أو لإعدادات  بروكسي النظام لكي تستعمل بروكسي سايفون المحلي .  </p>",
       "settings#local-proxy-ports#error-modal-body-socks": "<p>لقد ضبطت سايفون  لإستعمال منفذ محلي خاص  للبروكسي  سوكس  SOCKS\" <br\">\nمع الأسف  ظهر أن هذا المنفذ في طور الإستعمال حاليا ولا يمكن لسايفون إستعماله .\n</p>\n<p>\nالرجاء تغيير قيمة منفذ بروكسي  سوكس (SOCKS)  المضبوطة  \"configured SOCKS  proxy port value \" والمحاولة  من جديد.  ننصح بإزالة القيمة كي يستطيع سايفون إختيار منفذ متوفر أوتوماتيكيا. </p>",
       "feedback#submit_button": "أرسل",
@@ -12155,8 +12155,8 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#unapplied-changes-prompt#apply-button": "طبق ",
       "settings#reset-button": "إعادة الضبط إلى الافتراضي",
       "about#client-version": "سايفون لإصدارات أجهزة سطح مكتب من ويندوز (Windows Client Version)",
-      "settings#upstream-proxy#heading": "\"أبستريم\" بروكسي  ",
-      "settings#egress-region#description": "سايفون لديه خوادم (server) في بلدان مختلفة. إستعمال خادم سايفون لبلد قريب من بلدك سيوفر إتصال شبكة أسرع، ولكن يمكنك الدخول إلى مواقع وخدمات كما لو كنت إفتراضيا في بلد معين.  ",
+      "settings#upstream-proxy#heading": "أبستريم بروكسي  ",
+      "settings#egress-region#description": "سايفون لديه خوادم في بلدان مختلفة. إستعمال خادم سايفون لبلد قريب من بلدك سيوفر إتصال شبكة أسرع، ولكن يمكنك الدخول إلى مواقع وخدمات كما لو كنت إفتراضيا في بلد معين.  ",
       "settings#vpn-incompatible-msg": "(لا يعمل مع نمط (مود) L2TP/IPSec) ",
       "general#notice-modal-tech-preamble": "هذه هي معلومات الخطأ التقني ",
       "settings#local-proxy-ports#unique-error-msg": "يجب أن تكون المنافذ (البورتات) المحلية مختلفة عن بعضها البعض. ",
@@ -12165,33 +12165,33 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "nav#connection#stopped": "تم قطع الإتصال ",
       "settings#local-proxy-ports#heading": "المنافذ  المحلية للبروكسي ",
       "settings#egress-region#select-de": "ألمانيا",
-      "notice#systemproxysettings-setproxy-warning-template": "سايفون فشل في ضبط إعدادات بروكسي النظام لإتصال الإنترنت المسمى. “<%- data %>”. قد يكون ذلك سببه تصادم مع  نظام مكافحة الفيروسات. قد تحتاج إلى الضبط اليدوي لتطبيقك أو لإعدادات  بروكسي النظام لكي تستعمل بروكسي سايفون المحلي. ",
+      "notice#systemproxysettings-setproxy-warning-template": "سايفون فشل في ضبط إعدادات بروكسي النظام لإتصال الإنترنت المسمى “<%- data %>”. قد يكون ذلك سببه تصادم مع  نظام مكافحة الفيروسات. قد تحتاج إلى الضبط اليدوي لتطبيقك أو لإعدادات  بروكسي النظام لكي تستعمل بروكسي سايفون المحلي. ",
       "connection#stop-btn": "توقف",
-      "settings#egress-region#error-modal-body-http": "لقد ضبطت سايفون لإستعمال سيرفر في إقليم معين .n.<br>\nمع الأسف، هذأ الإقليم غير متوفر حاليا .<br> يجب إختيار منطقة جديدة أو التغيير إلى الخيار  الإفتراضي  \"أسرع بلد “ \"Fastest Country” choice\".",
+      "settings#egress-region#error-modal-body-http": "لقد ضبطت سايفون لإستعمال سيرفر في إقليم معين .n.<br>\nمع الأسف، هذأ الإقليم غير متوفر حاليا .<br> يجب إختيار منطقة جديدة أو التغيير إلى الخيار  الإفتراضي  \"الدولة الأسرع“.",
       "feedback#text_feedback_bottom_para": "إذا كانت الإستمارة أعلاه لا تعمل، أو تريد إرسال لقطات شاشة، الرجاء مراسلتنا عبر هذا البريد الإلكتروني  <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>.",
-      "settings#upstream-proxy#reason": "ألأبستريم بروكسي (upstream proxies ) مطلوبين أحيانا في المدارس، الجامعات، وأماكن العمل. إذا كنت تعلم إعدادات الأبستريم بروكسي المطلوب من موفر خدمة الإنترنت خاصتك فقد يكون إدخالهم يدويا هنا مطلوب للإتصال.",
-      "settings#local-proxy-ports#error-modal-title": "تضارب في  منفذ  (بورت)  البروكسي المحلي ",
+      "settings#upstream-proxy#reason": "ألأبستريم بروكسي مطلوبين أحيانا في المدارس، الجامعات، وأماكن العمل. إذا كنت تعلم إعدادات الأبستريم بروكسي المطلوب من موفر خدمة الإنترنت خاصتك فقد يكون إدخالهم يدويا هنا مطلوب للإتصال.",
+      "settings#local-proxy-ports#error-modal-title": "تضارب في  منفذ البروكسي المحلي ",
       "connection#disconnect-btn": "قطع الإتصال",
       "feedback#top_content_title": "شاركنا برأيك ",
-      "banner#long-connecting": "<strong>أوه كلا! </strong> يظهر إنك تواجه مشاكل في الإتصال!  <br>\nحمل آخر نسخة من سايفون من  <a class=\"NewVersionURL\" href=\"#\">موقع التحميل </a>\nأو عبر إرسال بريد إلكتروني إلى  <a class=\"NewVersionEmail\" href=\"#\"></a>",
+      "banner#long-connecting": "<strong>أوه كلا! </strong> يظهر إنك تواجه مشاكل في الإتصال!  <br>\nنزّل آخر نسخة من سايفون من  <a class=\"NewVersionURL\" href=\"#\">موقع التحميل </a>\nأو عبر إرسال بريد إلكتروني إلى  <a class=\"NewVersionEmail\" href=\"#\"></a>",
       "logs#placeholder": "ليس هناك سجلات حاليا ",
       "connection#stopped-msg": "بسايفون <span class=\"state-word\">إنقطع الإتصال</span>",
       "nav#about": "من نحن؟ ",
-      "settings#local-proxy-ports#leave-blank": "أتركها  <strong>فارغة </strong> للإنتقاء الأوتوماتيكي للمنافذ (البورتات)  (يوصى  به ).",
-      "settings#systray-minimize#heading": "صغر إلى منطقة الإعلام (لوحة  النظام) (system tray)  ",
+      "settings#local-proxy-ports#leave-blank": "أتركها  <strong>فارغة </strong> للإنتقاء الأوتوماتيكي للمنافذ (البورتات)  (يوصى  به).",
+      "settings#systray-minimize#heading": "صغّر إلى منطقة الإعلام (لوحة  النظام)   ",
       "language#success-message": "<strong> مرحباً </strong> أهلاً بكم في سايفون. ",
       "settings#egress-region#select-sg": "سنغافورة",
-      "feedback#diagnostic_check": "حمل المعلومات التشخيصية .  الرجاء الإنتباه أن هذه المعلومات التشخيصية لا تكشف هويتك، إنما تساعد سايفون على العمل أفضل  <a class=\"DataCollectionInfoURL\" href=\"#\">أنقر هنا لرؤية نوع المعلومات التي نجمعها </a>",
+      "feedback#diagnostic_check": "حمّل المعلومات التشخيصية .  الرجاء الإنتباه أن هذه المعلومات التشخيصية لا تكشف هويتك، إنما تساعد سايفون على العمل أفضل  <a class=\"DataCollectionInfoURL\" href=\"#\">أنقر هنا لرؤية نوع المعلومات التي نجمعها </a>",
       "settings#transport-mode#heading": "أسلوب النقل ",
       "about#description": "سايفون هو<strong> أداة لتجاوز الرقابة على الإنترنت.</strong> — لقد صمم لكي يساعد على الوصول إلى الإنترنت المفتوح، متجاوزا الرقابة والجدران النارية <strong>سايفون مصدر مفتوح</strong>  جرى تصميمه في تورنتو، كندا",
       "nav#connection#stopping": "جاري قطع الإتصال ",
       "settings#error-modal#title": "خطأ في الإعدادات ",
       "settings#apply-button": "طبق التغييرات ",
       "appbackend#minimized-to-systray-title": "لقد تّم تصغير سايفون إلى منطقة الإعلام ",
-      "settings#split-tunnel#heading": "شق النفق ",
+      "settings#split-tunnel#heading": "شق المسار الآمن  ",
       "settings#egress-region#invalid-error-msg": "إختر سيرفر إقليمي لسايفون صالح للإستعمال ",
       "appbackend#state-connected-title": "سايفون متصل ",
-      "settings#upstream-proxy#proxy-reqs": "وحدهم ال HTTP بروكسي (Proxies) الذين يدعمون HTTPS مسموح بهم.",
+      "settings#upstream-proxy#proxy-reqs": "وحدهم ال HTTP بروكسي  الذين يدعمون HTTPS مسموح بهم.",
       "settings#transport-mode#check-label": "إستعمل  أسلوب L2TP/IPSec",
       "connection#egress-region-combo-label": "إتصل عبر ",
       "settings#egress-region#select-gb": "المملكة المتحدة",
@@ -12200,14 +12200,14 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "feedback#smiley_sad": "سايفون  غالبا ما يفشل بالإتصال أو لا يعمل جيدا. ",
       "settings#unapplied-changes-prompt#body": "لقد أجريت تغييرات لإعداداتك، ولكنك لم تطبقها بعد.<br><br> ا ؟هل تريد تطبيق هذه التغييرات أو إبطالها؟ ",
       "settings#systray-minimize#enable-label": "صغر إلى  شريط  الإعلام (لوحة النظام) ",
-      "settings#egress-region#heading": "خادم سايفون الإقليمي  ",
+      "settings#egress-region#heading": "سيرفر سايفون الإقليمي  ",
       "settings#upstream-proxy#by-default": "إذا كان جهاز الكمبيوتر الخاص بك لديه بروكسي مثبت، سايفون  سيستعمل أوتوماتيكيا هذا البروكسي عندما ينشئ النفق. يمكنك تجاوز هذا السلوك عن طريق تحديد بروكسي للإستعمال، أو بتحديد عدم جواز إستعمال \"أبستريم بروكسي\" كهذا .",
       "settings#split-tunnel#enable-label": "لا تستعمل  بروكسي للمواقع في بلدك.",
       "nav#connection#starting": "جاري الإتصال ",
-      "feedback#text_feedback_email_prompt": "إذا  كنتم تريدوننا أن نجيب عليكم، الرجاء إدخال بريدكم الإلكتروني: ",
+      "feedback#text_feedback_email_prompt": "إذا  أردتم ردا مباشرا يجب إدخال بريدكم الإلكتروني:  ",
       "feedback#text_feedback_prompt": "الرجاء إدخال تعليقاتكم هنا:",
       "feedback#smiley_happy": "سايفون يعمل ويتصل كما أريد. ",
-      "about#wordart-tag": "وراء الحدود ",
+      "about#wordart-tag": "ما وراء الحدود ",
       "connection#wait-btn": "الرجاء الإنتظار ",
       "settings#transport-mode#help-text": "يستعمل ويندوز  L2TP/IPSec ربط الشبكات الإفتراضي  \"Virtual Networking\". هذا الوضع سيمرر كل التطبيقات  في نفق ، لكن  لن  يوفر  التجهيل   وبذلك لا  يؤمن  قدرات قوية لتجاوز الرقابة. لا  <strong>ننصح به </strong> لتجاوز أغلب جدران النار (Firewalls) .",
       "settings#egress-region#select-best-performance": "الدولة الأسرع ",
@@ -14088,7 +14088,7 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "feedback#success-message": "<strong>谢谢您！</strong>阁下的反馈已经发出。",
       "appbackend#state-stopped-title": "Psiphon 已中断连接",
       "settings#split-tunnel#help-text": "如果启用，发往阁下所在国家服务器的请求将不会经过赛风隧道。",
-      "about#visit-download-site": "请访问网站<strong><a class=\"NewVersionURL\" href=\"#\">下载新版本</a></strong>，或者<strong><a class=\"InfoURL\" href=\"#\">获取相关信息和帮助</a></strong>。Psiphon 在 Android 和 Windows 平台上可用。",
+      "about#visit-download-site": "请访问网站<strong><a class=\"NewVersionURL\" href=\"#\">下载最新版本</a></strong>，或者前往<strong><a class=\"InfoURL\" href=\"#\">获取相关信息和帮助</a></strong>。Psiphon 在 Android 和 Windows 平台上可用。",
       "settings#upstream-proxy#skip-label": "不使用上层代理",
       "settings#systray-minimize#help-text": "如果启用，在缩小赛风应用程序的窗口时，将会将其隐藏到通知区域（也称“系统托盘”，位于您的 Windows 任务栏的“时钟”旁边）。",
       "settings#upstream-proxy#port-label": "端口",
@@ -14100,7 +14100,7 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#unapplied-changes-prompt#title": "设定已更改",
       "settings#egress-region#select-us": "美国",
       "feedback#top_para_2": "许多问题可以通过下载赛风的最新版本解决。阁下可以<a class=\"NewVersionURL\" href=\"#\">点击这里下载最新版本</a>，阁下也可以发送电子邮件至 <a class=\"NewVersionEmail\" href=\"#\"></a>。",
-      "notice#systemproxysettings-setproxy-error-body": "<p>Psiphon 设置系统的代理设置失败了。</p>\n<p>这有可能是由于您的防病毒软件。您可能需要手动配置您的应用程序或者系统代理为使用本地的 Psiphon 代理。</p>",
+      "notice#systemproxysettings-setproxy-error-body": "<p>Psiphon 设置系统的代理设置失败了。</p>\n<p>这有可能是由于您的杀毒软件。您可能需要手动修改杀毒软件设置，或者修改系统代理配置以便使用本地的 Psiphon 代理。</p>",
       "settings#local-proxy-ports#error-modal-body-socks": "<p>\n您已配置赛风使用指定的本地端口作为 SOCKS 代理的端口。<br>\n然而，此端口似乎已被占用，因而赛风无法使用它。\n</p>\n<p>请更改配置的 SOCKS 代理端口值然后再试。我们建议您清除该值，使赛风自动挑选可用端口。\n</p>",
       "feedback#submit_button": "提交",
       "settings#systray-minimize#reason": "缩小赛风到通知区域（“系统托盘”）可以释放您的任务栏上的空间。这在您需要长时间运行赛风时非常有益。",
@@ -14127,11 +14127,11 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "nav#connection#stopped": "已中断连接",
       "settings#local-proxy-ports#heading": "本地代理端口",
       "settings#egress-region#select-de": "德国",
-      "notice#systemproxysettings-setproxy-warning-template": "Psiphon 设置名为“<%- data %>”的网络连接的代理设置失败了。这有可能是由于您的防病毒软件。您可能需要手动配置您的应用程序或者系统代理为使用本地的 Psiphon 代理。",
+      "notice#systemproxysettings-setproxy-warning-template": "Psiphon 设置名为“<%- data %>”的网络连接的代理设置失败了。这有可能是由于您的防病毒软件。这有可能是由于您的杀毒软件。您可能需要手动修改杀毒软件设置，或者修改系统代理配置以便使用本地的 Psiphon 代理。",
       "connection#stop-btn": "停止",
       "settings#egress-region#error-modal-body-http": "您已配置赛风使用一个特定区域的服务器。<br>\n但是，该区域不再可用。<br>\n您必须选择一个新的区域，或者更改为默认的“最快的国家”选项。",
       "feedback#text_feedback_bottom_para": "如果上面的表格无法使用，或者阁下想发送截图，请给我们发电子邮件至 <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">",
-      "settings#upstream-proxy#reason": "有些用户如学校、大学或企业必须使用上层代理。如果您知道自己的网络必须使用上层代理，请设置它们以成功连接。",
+      "settings#upstream-proxy#reason": "有些用户如学校、大学或企业必须使用上层代理。如果您知道自己的网络必须使用上层代理，请设置它们以便成功连接。",
       "settings#local-proxy-ports#error-modal-title": "本地代理端口冲突",
       "connection#disconnect-btn": "连接中断",
       "feedback#top_content_title": "向我们提供阁下的反馈。",
