--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -12393,8 +12393,10 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#invalid-error-msg": "[Ƈħǿǿǿǿşḗḗ ȧȧ ṽȧȧŀīīḓ Ƥşīīƥħǿǿƞ şḗḗřṽḗḗř řḗḗɠīīǿǿƞ.]",
       "settings#egress-region#label": "[Ƈǿǿƞƞḗḗƈŧ ṽīīȧȧ]",
       "settings#egress-region#select-best-performance": "[Ƒȧȧşŧḗḗşŧ Ƈǿǿŭŭƞŧřẏ]",
+      "settings#egress-region#select-ca": "[Ƈȧȧƞȧȧḓȧȧ]",
       "settings#egress-region#select-de": "[Ɠḗḗřḿȧȧƞẏ]",
       "settings#egress-region#select-gb": "[Ŭŭƞīīŧḗḗḓ Ķīīƞɠḓǿǿḿ]",
+      "settings#egress-region#select-in": "[Īīƞḓīīȧȧ]",
       "settings#egress-region#select-jp": "[Ĵȧȧƥȧȧƞ]",
       "settings#egress-region#select-nl": "[Ƞḗḗŧħḗḗřŀȧȧƞḓş]",
       "settings#egress-region#select-sg": "[Şīīƞɠȧȧƥǿǿřḗḗ]",
@@ -12508,8 +12510,10 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#invalid-error-msg": "‮Ↄɥoosǝ‬ ‮ɐ‬ ‮ʌɐʅıp‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ɹǝƃıou‬.",
       "settings#egress-region#label": "‮Ↄouuǝɔʇ‬ ‮ʌıɐ‬",
       "settings#egress-region#select-best-performance": "‮ɟɐsʇǝsʇ‬ ‮Ↄonuʇɹʎ‬",
+      "settings#egress-region#select-ca": "‮Ↄɐuɐpɐ‬",
       "settings#egress-region#select-de": "‮פǝɹɯɐuʎ‬",
       "settings#egress-region#select-gb": "‮∩uıʇǝp‬ ‮Ӽıuƃpoɯ‬",
+      "settings#egress-region#select-in": "‮Iupıɐ‬",
       "settings#egress-region#select-jp": "‮ſɐdɐu‬",
       "settings#egress-region#select-nl": "‮Nǝʇɥǝɹʅɐups‬",
       "settings#egress-region#select-sg": "‮Sıuƃɐdoɹǝ‬",
@@ -12713,11 +12717,13 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#egress-region#label": "Connect via",
       "settings#egress-region#select-best-performance": "Fastest Country",
       "settings#egress-region#select-us": "United States",
+      "settings#egress-region#select-ca": "Canada",
       "settings#egress-region#select-gb": "United Kingdom",
       "settings#egress-region#select-jp": "Japan",
       "settings#egress-region#select-sg": "Singapore",
       "settings#egress-region#select-nl": "Netherlands",
       "settings#egress-region#select-de": "Germany",
+      "settings#egress-region#select-in": "India",
       "settings#egress-region#description": "Psiphon has servers in many different countries. Using a Psiphon server in a country close to your home country will generally provide a better network connection, but you may wish to access websites and services like you are virtually in a specific country.",
       "settings#egress-region#default": "Choosing the default <strong>“Fastest Country”</strong> option allows Psiphon to automatically choose a server, which will generally result in the best network connection.",
       "settings#egress-region#invalid-error-msg": "Choose a valid Psiphon server region.",
@@ -17256,6 +17262,12 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                                 United States
                               </a>
                             </li>
+                            <li data-region="CA">
+                              <a href="#" tabindex="-1" class="flag ca"
+                                 data-i18n="settings#egress-region#select-ca">
+                                Canada
+                              </a>
+                            </li>
                             <li data-region="GB">
                               <a href="#" tabindex="-1" class="flag gb"
                                  data-i18n="settings#egress-region#select-gb">
@@ -17284,6 +17296,12 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
                               <a href="#" tabindex="-1" class="flag de"
                                  data-i18n="settings#egress-region#select-de">
                                 Germany
+                              </a>
+                            </li>
+                            <li data-region="IN">
+                              <a href="#" tabindex="-1" class="flag in"
+                                 data-i18n="settings#egress-region#select-in">
+                                India
                               </a>
                             </li>
                           </ul>
@@ -17726,6 +17744,12 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-CA" value="CA">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-CA">CA</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-JP" value="JP">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-JP">JP</label>
               </div>
@@ -17746,6 +17770,12 @@ window.HtmlCtrlInterface_UpdateDpiScaling = HtmlCtrlInterface_UpdateDpiScaling;
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-DE" value="DE">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-DE">DE</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-IN" value="IN">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-IN">IN</label>
               </div>
             </div>
             <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
