--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -502,6 +502,12 @@
                                 United Kingdom
                               </a>
                             </li>
+                            <li data-region="CA">
+                              <a href="#" tabindex="-1" class="flag ca"
+                                 data-i18n="settings#egress-region#select-ca">
+                                Canada
+                              </a>
+                            </li>
                             <li data-region="JP">
                               <a href="#" tabindex="-1" class="flag jp"
                                  data-i18n="settings#egress-region#select-jp">
@@ -524,6 +530,12 @@
                               <a href="#" tabindex="-1" class="flag de"
                                  data-i18n="settings#egress-region#select-de">
                                 Germany
+                              </a>
+                            </li>
+                            <li data-region="IN">
+                              <a href="#" tabindex="-1" class="flag in"
+                                 data-i18n="settings#egress-region#select-in">
+                                India
                               </a>
                             </li>
                           </ul>
@@ -966,6 +978,12 @@
             </div>
             <div class="checkbox-container">
               <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-CA" value="CA">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-CA">CA</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-JP" value="JP">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-JP">JP</label>
               </div>
@@ -986,6 +1004,12 @@
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-DE" value="DE">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-DE">DE</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-IN" value="IN">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-IN">IN</label>
               </div>
             </div>
             <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
