Add Spain to egress regions

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -538,6 +538,12 @@
                                 India
                               </a>
                             </li>
+                            <li data-region="ES">
+                              <a href="#" tabindex="-1" class="flag es"
+                                 data-i18n="settings#egress-region#select-es">
+                                Spain
+                              </a>
+                            </li>
                           </ul>
                         </div><!--/.dropdown-->
                       </div>
@@ -1010,6 +1016,12 @@
               <div class="controls checkbox inline">
                 <input type="checkbox" id="debug-AvailableEgressRegions-IN" value="IN">
                 <label class="checkbox inline" for="debug-AvailableEgressRegions-IN">IN</label>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <div class="controls checkbox inline">
+                <input type="checkbox" id="debug-AvailableEgressRegions-ES" value="ES">
+                <label class="checkbox inline" for="debug-AvailableEgressRegions-ES">ES</label>
               </div>
             </div>
             <a class="btn btn-primary"><i class="icon-arrow-right"></i></a>
