New Windows Client Settings and Bugfixes  - Add username/password fields to upstream proxy allowing use of upstream proxies requiring authentication as long as they support the `user:password@upstream.host` style  - Add 'Disable Timeouts for Slow Networks' option  - Fix: Upstream proxy was not visually disabled in VPN mode  - Updated generated CSS  - Added `grunt-contrib-connect` and `grunt-contrib-watch` along with a `grut serve` task to listen on `localhost:9000` and rebuild the stylesheets, strings, and inlined HTML on change

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -434,6 +434,53 @@
 
             <div class="accordion-group">
               <div class="accordion-heading">
+                <a class="accordion-toggle" href="#settings-accordion-disable-timeouts"
+                   data-toggle="collapse" data-parent="#settings-accordion">
+                  <i class="accordion-expand-icon icon-plus-square"
+                     data-icon-closed="icon-plus-square" data-icon-opened="icon-minus-square"></i>
+                  <span data-i18n="settings#disable-timeouts#heading">
+                    Disable Timeouts for Slow Networks
+                  </span>
+                  <span class="label label-warning vpn-incompatible-msg">
+                    <i class="icon-prohibited"></i>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
+                  </span>
+                </a>
+              </div>
+              <div id="settings-accordion-disable-timeouts" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <form class="vpn-incompatible">
+                    <fieldset>
+                      <p data-i18n="settings#disable-timeouts#help-text">
+                        If enabled, requests made via Psiphon will never timeout
+                      </p>
+                      <p data-i18n="settings#disable-timeouts#reason">
+                        This means that over very slow network connections, you are
+                        more likely to have your request succeed.
+                      </p>
+                      <div class="checkbox-container">
+                        <div class="controls checkbox">
+                          <input type="checkbox" id="DisableTimeouts"/>
+                          <label for="DisableTimeouts">
+                            <span data-i18n="settings#disable-timeouts#enable-label">
+                              Disable timeouts for slow networks
+                            </span>
+                          </label>
+                        </div>
+                      </div>
+                      <span class="help-block">
+                        <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
+                          (Doesn't work with L2TP/IPSec mode.)
+                        </small>
+                      </span>
+                    </fieldset>
+                  </form>
+                </div>
+              </div>
+            </div>
+            
+            <div class="accordion-group">
+              <div class="accordion-heading">
                 <a class="accordion-toggle" href="#settings-accordion-egress-region"
                    data-toggle="collapse" data-parent="#settings-accordion">
                   <i class="accordion-expand-icon icon-plus-square"
@@ -627,11 +674,15 @@
                   <span data-i18n="settings#upstream-proxy#heading">
                     Upstream Proxy
                   </span>
+                  <span class="label label-warning vpn-incompatible-msg">
+                    <i class="icon-prohibited"></i>
+                    <span data-i18n="settings#vpn-incompatible-label">L2TP/IPSec</span>
+                  </span>
                 </a>
               </div>
               <div id="settings-accordion-upstream-proxy" class="accordion-body collapse">
                 <div class="accordion-inner">
-                  <form class="form-horizontal">
+                  <form class="form-horizontal vpn-incompatible">
                     <fieldset>
                       <p data-i18n="settings#upstream-proxy#by-default">
                         If your computer already has a proxy configured, by
@@ -649,8 +700,28 @@
                       <p data-i18n="settings#upstream-proxy#proxy-reqs">
                         Only HTTP proxies that support HTTPS are allowed.
                       </p>
-                      <div class="control-group skip-upstream-proxy-incompatible">
-                        <label for="UpstreamProxyHostname" class="control-label"
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyUsername" class="control-label vpn-incompatible-label"
+                                data-i18n="settings#upstream-proxy#username-label">
+                          Username
+                        </label>
+                        <div class="controls">
+                          <input type="text" id="UpstreamProxyUsername"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                        </div>
+                      </div>
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyPassword" class="control-label vpn-incompatible-label"
+                                data-i18n="settings#upstream-proxy#password-label">
+                          Password
+                        </label>
+                        <div class="controls">
+                          <input type="text" id="UpstreamProxyPassword"
+                                 autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+                        </div>
+                      </div>
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyHostname" class="control-label vpn-incompatible-label"
                                 data-i18n="settings#upstream-proxy#hostname-label">
                           Hostname
                         </label>
@@ -659,8 +730,8 @@
                                  autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
                         </div>
                       </div>
-                      <div class="control-group skip-upstream-proxy-incompatible">
-                        <label for="UpstreamProxyPort" class="control-label"
+                      <div class="control-group skip-upstream-proxy-incompatible vpn-incompatible">
+                        <label for="UpstreamProxyPort" class="control-label vpn-incompatible-label"
                                 data-i18n="settings#upstream-proxy#port-label">
                           Port
                         </label>
@@ -672,7 +743,7 @@
                           </span>
                         </div>
                       </div>
-                      <div class="control-group">
+                      <div class="control-group vpn-incompatible">
                         <div class="controls">
                           <div class="checkbox-container">
                             <div class="checkbox">
@@ -686,10 +757,20 @@
                           </div>
                         </div>
                       </div>
-                      <span class="help-block upstream-proxy-set-match">
-                        <span data-i18n="settings#upstream-proxy#set-both-error-msg">
+                      <span class="help-block upstream-proxy-hostname-port-match">
+                        <span data-i18n="settings#upstream-proxy#set-both-hostname-port-error-msg">
                           You must set both Hostname and Port, or leave both blank for automatic selection.
                         </span>
+                      </span>
+                      <span class="help-block upstream-proxy-username-password-match">
+                        <span data-i18n="settings#upstream-proxy#set-both-username-password-error-msg">
+                          You must set both a Username and Password, or leave both blank.
+                        </span>
+                      </span>
+                      <span class="help-block">
+                          <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
+                            (Doesn't work with L2TP/IPSec mode.)
+                          </small>
                       </span>
                     </fieldset>
                   </form>
